# routes/api.js
@@ -5,6 +5,10 @@ const itemController = require('../controllers/itemController');
 router.post('/items', itemController.createItem);
 router.get('/items', itemController.getAllItems);
 router.get('/items/:id', itemController.getItem);
+
+//
+router.get('/items/:token', itemController.getItem)
+
 router.put('/items/:id', itemController.updateItem);
 router.delete('/items/:id', itemController.deleteItem);
 
